Fixed flickering of navigation during welcome animation

--- a/public/styles/triplog/_pageTransition.scss
+++ b/public/styles/triplog/_pageTransition.scss
@@ -25,7 +25,7 @@
     nav {
       position: absolute;
       top: 0;
-      z-index: -10
+      z-index: 1;
     }
   }
 }
@@ -39,7 +39,7 @@
     nav {
       position: absolute;
       top: 0;
-      z-index: -10;
+      z-index: 1;
     }
   }
 
